--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar-container {
   width: 250px;
   height: 100vh;
-  background-color: #ffffff; /* White background */
+  background-color: #ffffff;
   box-shadow: 2px 0 20px rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
@@ -11,27 +11,26 @@
   overflow-y: auto;
 }
 
-/* Sidebar Branding */
 .sidebar-brand {
-  height: 70px; /* Fixed height to match navbar */
+  height: 70px;
   display: flex;
   align-items: center;
   padding: 0 20px;
-  background-color: #3498db; /* Blue background for branding */
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Subtle border */
+  background-color: #3498db;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .sidebar-brand .navbar-brand {
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #ffffff; /* White text */
+  color: #ffffff;
 }
 
 .sidebar-brand .navbar-brand i {
   font-size: 24px;
   margin-right: 12px;
-  color: #ffffff; /* White icon */
+  color: #ffffff;
 }
 
 .sidebar-brand .navbar-brand span {
@@ -58,31 +57,31 @@
   display: flex;
   align-items: center;
   padding: 12px 16px;
-  color: #555555; /* Dark gray text */
+  color: #555555;
   text-decoration: none;
   border-radius: 8px;
   transition: all 0.3s ease;
 }
 
 .sidebar-menu ul li a:hover {
-  background-color: #f1f1f1; /* Light gray background on hover */
-  color: #3498db; /* Blue text on hover */
-  transform: translateX(5px); /* Slight right shift on hover */
+  background-color: #f1f1f1;
+  color: #3498db;
+  transform: translateX(5px);
 }
 
 .sidebar-menu ul li a.active {
-  background-color: #3498db; /* Blue background for active link */
-  color: #ffffff; /* White text for active link */
+  background-color: #3498db;
+  color: #ffffff;
 }
 
 .sidebar-menu ul li a i {
   font-size: 18px;
   margin-right: 12px;
-  color: #3498db; /* Blue icons */
+  color: #3498db;
 }
 
 .sidebar-menu ul li a.active i {
-  color: #ffffff; /* White icons for active link */
+  color: #ffffff;
 }
 
 /* Responsive Design */
@@ -107,7 +106,6 @@
     left: 249px;
     width: calc(100% - 250px);
     height: 70px;
-    /* background: linear-gradient(500deg, rgb(152, 152, 152), #2e2e2f); */
     background-color: #0061c8;
     display: flex;
     align-items: center;
