--- a/src/pages/Sale/SaleBillDetails.css
+++ b/src/pages/Sale/SaleBillDetails.css
@@ -212,3 +212,16 @@
   font-size: 18px;
   font-weight: 700;
 }
+
+.bill-footer {
+    margin-top: 20px;
+    padding-top: 10px;
+    border-top: 1px solid #ccc;
+    text-align: right;
+    font-size: 0.9em;
+    color: #666;
+}
+
+.bill-footer p {
+    margin: 5px 0;
+}
